--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
     <style>
         :root {
-            --primary: #1877F2;
-            --dark: #1c1e21;
-            --light: #f0f2f5;
-            --gray: #65676b;
-            --gray-light: #e4e6eb;
+            --primary: #0066b3;
+            --dark: #333;
+            --light: #f6f6f6;
+            --gray: #666;
+            --gray-light: #e9e9e9;
         }
 
         * {
@@ -30,11 +30,11 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
-            max-width: 480px;
+            max-width: 960px;
             margin: 0 auto;
             background-color: white;
             position: relative;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
 
         /* Header styles */
@@ -42,13 +42,22 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 8px 15px;
+            padding: 12px 20px;
             border-bottom: 1px solid var(--gray-light);
             position: sticky;
             top: 0;
-            background-color: white;
+            background-color: var(--primary);
             z-index: 10;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .logo {
+            color: white;
+            font-size: 24px;
+        }
+
+        .top-icons .icon {
+            color: white;
         }
 
         .logo {
