--- a/index.html
+++ b/index.html
@@ -341,6 +341,17 @@
             color: var(--gray);
         }
 
+        @keyframes saveSuccess {
+            0% { opacity: 0; transform: translateY(-10px); }
+            20% { opacity: 1; transform: translateY(0); }
+            80% { opacity: 1; transform: translateY(0); }
+            100% { opacity: 0; transform: translateY(10px); }
+        }
+
+        .save-feedback {
+            animation: saveSuccess 1.5s ease-in-out;
+        }
+
         .edit-profile-btn {
             background-color: var(--gray-light);
             border: none;
@@ -555,8 +566,11 @@
                     <img src="/api/placeholder/200/200" alt="Profile" class="profile-avatar" id="profile-preview">
                 </label>
                 <input type="file" id="profile-upload" accept="image/*" style="display: none;">
-                <div class="profile-name">Tu Nombre</div>
-                <div class="profile-handle">@usuario</div>
+                <div class="profile-name" id="profile-name" style="cursor: pointer;">Tu Nombre</div>
+                <div class="profile-handle" id="profile-handle" style="cursor: pointer;">@usuario</div>
+                <div class="save-feedback" style="display: none; color: var(--primary); font-size: 14px; margin-top: 5px;">
+                    <i class="fas fa-check"></i> Guardado
+                </div>
                 <div class="profile-bio">Aquí puedes escribir tu biografía. Cuenta algo sobre ti, tus intereses, pasiones o simplemente una frase que te defina.</div>
                 <div class="profile-stats">
                     <div class="stat">
@@ -746,6 +760,39 @@
                 }
                 reader.readAsDataURL(file);
             }
+        });
+
+        // Handle username editing
+        function makeEditable(element) {
+            const currentText = element.textContent;
+            element.contentEditable = true;
+            element.focus();
+            
+            element.addEventListener('blur', function() {
+                element.contentEditable = false;
+                if (element.textContent !== currentText) {
+                    const feedback = document.querySelector('.save-feedback');
+                    feedback.style.display = 'block';
+                    setTimeout(() => {
+                        feedback.style.display = 'none';
+                    }, 1500);
+                }
+            });
+
+            element.addEventListener('keypress', function(e) {
+                if (e.key === 'Enter') {
+                    e.preventDefault();
+                    element.blur();
+                }
+            });
+        }
+
+        document.getElementById('profile-name').addEventListener('click', function() {
+            makeEditable(this);
+        });
+
+        document.getElementById('profile-handle').addEventListener('click', function() {
+            makeEditable(this);
         });
 
         // Toggle between feed tabs
